integrating perfect scrollbar as directive for container background fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 html, body {
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .result-table {
@@ -29,6 +31,14 @@ html, body {
     -o-background-size: cover;
     background-size: cover;
 }
+
+
+.scrollContainer{
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+}
+
 
 .flexContainer{
   display: flex !important;
@@ -133,7 +143,7 @@ html, body {
 **/
 
 .selectize-dropdown {
-    margin: -6px 0 0 0 ;
+    margin: -6px 0 20px 0 ;
 }
 
 /**
